--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-jwt": "^6.1.0",
     "express-jwt-authz": "^2.4.1",
     "jwks-rsa": "^2.0.5",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^4.1.3"
   },
   "devDependencies": {
